hit test updated

--- a/sections/Testing/HitTest.tex
+++ b/sections/Testing/HitTest.tex
@@ -1,28 +1,26 @@
 \chapter{Turret Accuracy}\label{TurretAcc}
-In this chapter the turrets abillity to hit the target has been tested.
+In this chapter the turrets ability to hit the target has been tested.
 
 \section{Test Setup}
-The turret is placed against a wall and the floor right in front of the turret
-is marked at 0.5m, 1m, 1.5m such that the shortes distance to the turret is when
-the target is rigth in front of the target. The target used in the test is the final
-target.
+The turret is placed against a wall, and then the floor
+is marked at 0.5m, 1m, 1.5m such that the shortest distance to the turret is when
+the target is right in front of the turret. The target used in the test is the final
+version of the target.
 
 \section{Test Execution}
-Under the execution differten distance and speeds of the target is used to test
-the accuracy. The turret is placed such that it ``looks'' in the direction of
-the target for every test. The target is then started with a speed and a
-distance and then it is observed if the turret hits or misses the target. Then
-the test is repetede 3 more times, then a new distance or speed but not both is
-chosen and then 4 more tests are conduted. A result is only noted if a actual
-shot is fired. 
+The turret is tested at with the target running at three different speeds, 40\%,50\% and 60\%. Each percentage is a measure of how much power the engines are running at.
+For each speed setting, the turret is tested at the 3 different lengths mentioned in the test setup. For each combination of speed and distance the test is run 4 times.
+The turret is placed such that it ``looks'' in the direction of
+the target for every test. The target is then turned on at the speed and distance to be tested, and then it is observed if the turret hits or misses the target.
 
 \section{Test Evaluation}
 The result of the test can be seen in \autoref{table:accuracy}. Here it can be
-seen that the turret only hits 3 out o 24 times it actual fires, in the case of
-a distance of 1.5m the ultrasonic sensor would not measuer a distance to the
-target, and therefor no futher test at the range was conduted. But all of the
-3 shots that hit the target was from
-the dataset where the power was 40\% and the distance 0.5m  In conclusion \names
-had an accuracy of 12.5\%.
+seen that the turret only hits 3 out o 24 times it actually fires, and in the case of
+a distance of 1.5m the ultrasonic sensor would not measure a distance to the
+target, and therefor no further tests at that range was conducted. But all of the
+3 shots that hit the target were from
+the dataset where the power was 40\% and the distance 0.5m.\nl
+
+In conclusion \names had an accuracy of 12.5\%.
 
 \dataTable{accuracy}{Data from the accuracy test}{accuracy}
