--- a/sections/Implementation/Implementation.tex
+++ b/sections/Implementation/Implementation.tex
@@ -1,6 +1,5 @@
 \chapter{Implementation}\label{ImplLabel}
-Following the turret design in \autoref{MechDesign} and the design of the system
-architecture in \autoref{SysArch} this chapter will be used to present and
+Following the turret design in \autoref{MechDesign} this chapter will be used to present and
 describe the final implementation of the software used in the \name turret. This will be done
 by looking at the main system components and the three main program threads:
 tracking, distance measurement and fireing.
