changes to discussion...ikk for sjaaw

--- a/sections/Conclusion/Discussion.tex
+++ b/sections/Conclusion/Discussion.tex
@@ -8,7 +8,7 @@ suggesting improvements for potential future development.
 A major problem was the quality of the sensor input\ldots
 
 \section{Quantity of Data}
-As discussed above in \autoref{DSQ}, the quality of the recieved data was not
+As discussed above in \autoref{DSQ}, the quality of the received data was not
 satisfactory\ldots
 
 \section{Implementation of Machine Intelligence}
@@ -20,11 +20,16 @@ As a part of the machine intelligence, we would have liked to implement
 communication via bluetooth such that calculations could be made on a PC instead
 of the NXT.
 
+\section{Should have refactored the code}
+As a group we decided to use an agile software engineering paradigm. This means that
+refactoring
+\section{Put more thought into picking an OS/Firmware, language to write in}
+
 \section{Scheduling}
 As we have no control over the scheduling of the different threads on the NXT\ldots
 
 \section{Less Multithreading}
-During evaluation of the 
+During evaluation of the
 
 \begin{itemize}
   \item Track og GetDataAndCalculate bør ikke køre samtidigt. Den ene starter
