--- a/sections/Implementation/MIImplementation/ImplBN.tex
+++ b/sections/Implementation/MIImplementation/ImplBN.tex
@@ -8,11 +8,11 @@ the current setup.
 We did not implement a belief network, therefor this section will be used to
 show how it could be implemented. To implement the network there are two
 options, one where it could be implemented on the NXT and the other where it is
-implemented on a PC. 
+implemented on a PC.
 
 % Introduction: We didnt really implement the MI-part.
 % \textbf{If} it was to be implemented we had two options:
-% 
+%
 % \begin{enumerate}
 % \item Implement the belief network on the NXT.
 % \item Run the MI-agent on a computer and establish communication between the brick and the computer.
@@ -23,12 +23,12 @@ One of the first issues with implementing the model on the NXT is the amount of
 RAM for the computing the network. The primary limitation for the NXT is the
 low amount of RAM, namely 64KB, see \autoref{PlatformC}. Although the flash
 storage on the NXT is larger, at 256KB, it is still necessary to load the code
-into the RAM, so the real limiting factor is still the amount of available RAM. 
+into the RAM, so the real limiting factor is still the amount of available RAM.
 In order to implement the network on the NXT, it is necessary to reduce the
 complexity of the model or else it wont be possible to implement it on the NXT.
 Since the first network had a state space of $3^2*5^6 = 140625$ states, this
 would theoretically need 560KB of RAM given that each state is 4 byte. The 4
-bytes are assumed as the NXT uses 32 bit to represent floating point which is
+bytes are assumed as the NXT uses 32 bit to represent floating points which is
 the largest type used. However if we remove some of the states which are not
 necessary according to the implementation, the state space could be reduced to
 $3^1*5^4 = 1875$ which given a size of the state of each space at 4KB would need
@@ -60,7 +60,7 @@ cable could potentially restrict the movement by adding more resistance.
 On the other hand, the USB connection is faster than Bluetooth although we do not consider transfer speed in our choice.\nl
 
 Using bluetooth for communication would have been preferred, since there is
-no cables which can stop or slow down the turret when it turns. 
+no cables which can stop or slow down the turret when it turns.
 This approach would require a PC with bluetooth communication. Once a connection has
 been established, it uses the NXT built-in mailbox system for transferring
 messages between brick and the PC.\nl
