--- a/sections/Conclusion/Discussion.tex
+++ b/sections/Conclusion/Discussion.tex
@@ -22,7 +22,8 @@ of the NXT.
 
 \section{Should have refactored the code}
 As a group we decided to use an agile software engineering paradigm. This means that
-refactoring
+refactoring should be a recurring event in our development strategy. Ideally, after each iteration, the code should be refactored. Although we did refactor our code from time to time, there was no schedule to it at all, resulting in a lack of refactoring. What we should have done is dedicate a team to refactor the code after each iteration, ensuring that the refactoring occurs regularly. This would also be more in line with the Unified Process way of thinking, making the refactoring part of the development process, instead of just doing it when feel it is necessary.
+
 \section{Put more thought into picking an OS/Firmware, language to write in}
 
 \section{Scheduling}
@@ -32,7 +33,7 @@ As we have no control over the scheduling of the different threads on the NXT\ld
 During evaluation of the
 
 (HINT: Track og GetDataAndCalculate bør ikke køre samtidigt. Den ene starter
-  den anden, og holder den kun åben i et tidsinterval.) 
-  
+  den anden, og holder den kun åben i et tidsinterval.)
+
 \section{Real camera and custom software}
 (HINT: Rigtigt kamera med vores egen software.)
