--- a/sections/Design/BNDesig/DesignBN.tex
+++ b/sections/Design/BNDesig/DesignBN.tex
@@ -1,21 +1,21 @@
 \chapter{Model Design}
 
-The purpose of the belief network is to predict the directional vector of the
+The purpose of the belief network is to predict the vector of the
 target. This allows us to make a general prediction of the direction and speed
 the target is travelling at. This can then be used to hit the target at a
-specified point in time. \fix{This chapter will be used to describe the network
-and explain the variables and their domain.}{}
-
-\fix{}{Do we need to talk about creating our own version of
-hugin? --> i would say it is outside the scope of the project}
-\fix{}{Do we need to discuss a simpler model? --> maybe able to run on NXT but
-must be very simple}
+specified point in time. This chapter will be used to describe the network,
+define the domains and construct the conditional probability tables for each of
+the variables.
+%\fix{}{Do we need to talk about creating our own version of
+%hugin? --> i would say it is outside the scope of the project}
+%\fix{}{Do we need to discuss a simpler model? --> maybe able to run on NXT but
+%must be very simple}
 
 \section{Network Structure}
-The network, see \autoref{BNDone}, displays a the final version of the network.
+The network, see \autoref{BNDone}, displays the final version of the network.
 In this network the nodes \texttt{SA\_0-2} and \texttt{SD\_0-2} represent
-observations of distance and angle. The numbers next to the nodes represent the
-time at which they happen.
+observations of distance and angle at time 0-2. The numbers next to the nodes
+represent the time at which they happen.
 
 %  Worth noting is that the observations does
 % not occur on fixed intervals, but are instead provided once the NXT has found
@@ -28,18 +28,17 @@ time at which they happen.
 
 \figx[0.8]{BNDone}{The model for the belief network}
 
-The nodes are, as mentioned in \autoref{LabelBN}, variables and the edges are
-the dependencies. The nodes \texttt{Vector\_1} and \texttt{Vector\_2} are used
-to represent possible directional vectors the target can have. The edges moving
+The nodes are, as mentioned in \autoref{LabelBN}, variables and the edges
+represent the dependencies. The nodes \texttt{Vector\_1} and \texttt{Vector\_2}
+are used to represent possible vectors the target can have. The edges moving
 from \texttt{Vector\_1} to \texttt{SA\_0}, \texttt{SD\_0}, \texttt{SA\_1} and
-\texttt{SD\_1} represent that all of these nodes are dependant on
+\texttt{SD\_1} represent that all of these nodes are dependent on
 \texttt{Vector\_0}. 
 Since the sensor nodes are comprised of distance and angle, we need two
 of such sets in order to reliably determine a vector. \texttt{Vector\_2} has
 edges to \texttt{SA\_1}, \texttt{SD\_1}, \texttt{SA\_2} and
 \texttt{SD\_2}, this represent that the we use the
 previous observation to determine a new direction vector. The edge going from
- \texttt{Vector\_1} to \texttt{Vector\_2} represents that the previous direction
-vector can be compared the new vector to the old. This vector can then be used
-in conjunction with the last observation set to find the targets position at a
-given time.
+ \texttt{Vector\_1} to \texttt{Vector\_2} represents that new vector is
+ dependent on the old, in the sense that the vector should not change wildly,
+ unless a faulty observation has occured. 
