--- a/sections/Design/BNDesig/DomainsAndProbs.tex
+++ b/sections/Design/BNDesig/DomainsAndProbs.tex
@@ -1,15 +1,15 @@
 \section{Domains and Probability}\label{MID}
 
-The model is designed to predict \texttt{Vector\_2}, and to do this we need to
+The model is designed to predict \texttt{Vector\_2}, to do this we need to
 model how the vectors relate to the observations and each other, as well as
-what their domains are. There are however limitations we can consider. The
+define their domains are. There are however limitations we need to consider. The
 model is constructed using Hugin Lite \citep{Hugin}, this allows the model to
-be constructed easily, but it limits the total number of nodes to 50 and the
-number of cases to 500. An example of a case is a specific value in \texttt{SD\_0}
-given a specific value in \texttt{Vector\_1}. This limitation decreases how
-precise the model can be, it becomes problematic if we want to have
-variables that represent the distance between the target and turret, as well as
-the current angle of the turret. To work around these limits we have divided
+be constructed easily, but it limits the total number of state to 50 and
+the number of cases to 500. An example of a case is a specific value in \texttt{SD\_0}
+given a specific value in \texttt{Vector\_1}. This limitation decreases the
+precision of the model. If we want to model the entire domain of for example
+distance, we would need a state for each possible value the domain
+contains. To work around these limits we have divided
 the domains into intervals. This means the model lose some precision, but it
 allows us to work around the limit of 500 cases. Instead of having only a few
 nodes with a continuous set of values, we can consider additional variables,
@@ -218,6 +218,6 @@ nodes through the connections mentioned in \autoref{LabelBN}.
 \figx{BNEvidence}{The network with evidence on its sensor nodes.}
 
 We can look at \texttt{Vector\_2} and find the most likely outcome of it, and
-see if it a is likely to be a bad vector.
+see if it is likely to be a bad vector.
 
 
