--- a/sections/Conclusion/Discussion.tex
+++ b/sections/Conclusion/Discussion.tex
@@ -18,7 +18,7 @@ not been implemented.
 \section{Communication Using Bluetooth}
 As a part of the machine intelligence, we would have liked to implement
 communication via bluetooth such that calculations could be made on a PC instead
-of the NXT.
+of the NXT. But we were able not 
 
 \section{Should have refactored the code}
 As a group we decided to use an agile software engineering paradigm. This means that
