--- a/bib/lib.bib
+++ b/bib/lib.bib
@@ -90,6 +90,22 @@
   howpublished = {\url{http://physlets.org/tracker/}}
 }
 
+@MISC{LeJos,
+  author = {},
+  title = {{LeJOS, Java for Lego Mindstorms / NXJ}},
+  year = {},
+  note = {Seen 13/12/2016},
+  howpublished = {\url{http://www.lejos.org/nxj.php}}
+}
+
+@MISC{RobotC,
+  author = {},
+  title = {{ROBOTC.net :: Home of the best robot programmig language for Educational Robotics. Made for NXT programming and VEX programming}},
+  year = {},
+  note = {Seen 13/12/2016},
+  howpublished = {\url{http://www.robotc.net/}}
+}
+
 
 @MISC{Hugin,
   author = {},
